WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142399
ReadableStream does not not need to pass itself as callback parameter
https://bugs.webkit.org/show_bug.cgi?id=142399
Summary
ReadableStream does not not need to pass itself as callback parameter
youenn fablet
Reported
2015-03-06 09:17:59 PST
The callbacks can directly retrieve it by capturing the JSReadableStream object itself.
Attachments
Patch
(2.97 KB, patch)
2015-03-06 09:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.99 KB, patch)
2015-03-09 03:41 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2015-03-06 09:30:06 PST
Created
attachment 248070
[details]
Patch
Darin Adler
Comment 2
2015-03-06 15:55:32 PST
Comment on
attachment 248070
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=248070&action=review
> Source/WebCore/bindings/js/JSReadableStreamCustom.cpp:74 > + wrapper.resolve(&impl());
What guarantees that "this" won’t be deallocated before this function gets called?
> Source/WebCore/bindings/js/JSReadableStreamCustom.cpp:92 > + wrapper.resolve(&impl());
What guarantees that "this" won’t be deallocated before this function gets called?
youenn fablet
Comment 3
2015-03-09 03:41:13 PDT
Created
attachment 248240
[details]
Patch for landing
youenn fablet
Comment 4
2015-03-09 04:20:18 PDT
(In reply to
comment #2
)
> Comment on
attachment 248070
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=248070&action=review
> > > Source/WebCore/bindings/js/JSReadableStreamCustom.cpp:74 > > + wrapper.resolve(&impl()); > > What guarantees that "this" won’t be deallocated before this function gets > called? > > > Source/WebCore/bindings/js/JSReadableStreamCustom.cpp:92 > > + wrapper.resolve(&impl()); > > What guarantees that "this" won’t be deallocated before this function gets > called?
Good point. It is not implemented yet. Plan is to use ActiveDOMObject from which ReadableStream is deriving. I filed
bug 142478
for that purpose.
WebKit Commit Bot
Comment 5
2015-03-09 04:32:16 PDT
Comment on
attachment 248240
[details]
Patch for landing Clearing flags on attachment: 248240 Committed
r181262
: <
http://trac.webkit.org/changeset/181262
>
WebKit Commit Bot
Comment 6
2015-03-09 04:32:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug