ReadableStream does not not need to pass itself as callback parameter https://bugs.webkit.org/show_bug.cgi?id=142399

Reviewed by Darin Adler.

No change in behavior.

* Modules/streams/ReadableStream.h: Remove ReadableStream parameter from SuccessCallback definition.
* bindings/js/JSReadableStreamCustom.cpp:
(WebCore::JSReadableStream::ready): Capture JSReadableStream instance instead.
(WebCore::JSReadableStream::closed): Capture JSReadableStream instance instead.


Canonical link: https://commits.webkit.org/160519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181262 268f45cc-cd09-0410-ab3c-d52691b4dbfc